--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-pt">
 
 <head>
   <meta charset="UTF-8">
@@ -8,13 +8,14 @@
   <title>Prefeitura de Patos de Minas</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="icon" href="img/icones/brasao-patos.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
   <header>
-    <img src="img/brasao-patos.png" alt="brasão de patos de minas">
+    <img class="brasao" src="img/icones/brasao-patos.png" alt="brasão de patos de minas">
     <nav>
       <ul class="cabecalho">
         <a href="index.html">
@@ -34,6 +35,20 @@
         </a>
       </ul>
     </nav>
+    <div class="hamburger-menu">
+      <input id="menu__toggle" type="checkbox" />
+      <label class="menu__btn" for="menu__toggle">
+        <span></span>
+      </label>
+  
+      <ul class="menu__box">
+        <li class="active"><a class="menu__item" href="index.html">Início</a></li>
+        <li><a class="menu__item" href="historia.html">História</a></li>
+        <li><a class="menu__item" href="eventos.html">Eventos</a></li>
+        <li><a class="menu__item" href="pontos-turisticos.html">Pontos Turísticos</a></li>
+        <li><a class="menu__item" href="manifestacoes.html">Manifestações</a></li>
+      </ul>
+    </div>
   </header>
   <main class="container">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -41,7 +56,7 @@
         <div class="carousel-item active">
           <a
             href="https://www.patoshoje.com.br/noticias/festival-de-teatro-e-danca-acontece-neste-final-de-semana-no-mocambo-veja-a-programacao-81695.html">
-            <img class="d-block w-100" src="img/guarda.jpg" alt="Primeiro Slide">
+            <img class="d-block w-100" src="img/index/guarda.jpg" alt="Primeiro Slide guarda-chuvas">
             <div class="carousel-caption d-none d-md-block">
               <h5>Festival de Teatro e Dança acontece neste final de semana no Mocambo; veja a programação
               </h5>
@@ -52,7 +67,7 @@
       <div class="carousel-item">
         <a
           href="https://www.patoshoje.com.br/noticias/panamenhos-mostram-adaptacao-e-felicidade-por-estudarem-no-unipam-em-patos-de-minas-81693.html">
-          <img class="d-block w-100" src="img/Vestibular-UNIPAM-2022-9.webp" alt="Segundo Slide">
+          <img class="d-block w-100" src="img/index/unipam.webp" alt="Segundo Slide vestibular unipam">
           <div class="carousel-caption d-none d-md-block">
             <h5>Panamenhos mostram adaptação e felicidade por estudarem no UNIPAM, em Patos de Minas</h5>
         </a>
@@ -61,7 +76,7 @@
     <div class="carousel-item">
       <a
         href="https://www.patoshoje.com.br/noticias/maior-investimento-em-saude-e-educacao-da-historia-falcao-apresenta-balanco-dos-1000-dias-de-governo-81690.html">
-        <img class="d-block w-100" src="img/a1552_b4f3505b2bf7456c745192af5e506e56_B.jpg" alt="Terceiro Slide">
+        <img class="d-block w-100" src="img/index/adelaide-maciel.jpg" alt="Terceiro Slide">
         <div class="carousel-caption d-none d-md-block">
           <h5>Maior investimento em saúde e educação da história? Falcão apresenta balanço dos 1000 dias de
             governo</h5>
