--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
       <ul class="lista-acesso">
         <a target="_blank" href="https://patosdeminas.mg.gov.br/administracao/">
           <li>
-            Secretaria Municipal De Administração
+            Sec. Mun. De Administração
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/agricultura/">
           <li>
-            Secretaria Municipal De Agricultura, Pecuária E Desenvolvimento Sustentável
+            Sec. Mun. De Agricultura
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/controladoria/">
@@ -115,32 +115,32 @@
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/administracao/">
           <li>
-            Secretaria Municipal De Administração
+            Sec. Mun. De Administração
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/cultura/">
           <li>
-            Secretaria Municipal De Cultura, Turismo, Esporte E Lazer
+            Sec. Mun. De Cultura
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/desenvolvimento-social/">
           <li>
-            Secretaria Municipal De Desenvolvimento Social
+            Sec. Mun. De Desenvolvimento Social
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/educacao/">
           <li>
-            Secretaria Municipal De Educação
+            Sec. Mun. De Educação
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/financas/">
           <li>
-            Secretaria Municipal De Finanças E Orçamentos
+            Sec. Mun. De Finanças
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/iprem/">
           <li>
-            Instituto De Previdência Municipal De Patos De Minas (IPREM)
+            Inst. De Prev. Municipal De P. De Minas (IPREM)
           </li>
         </a>
         <a target="_blank" href="https://patosdeminas.mg.gov.br/governo/">
